--- a/CRUD Web Application/Views/Category/Index.cshtml
+++ b/CRUD Web Application/Views/Category/Index.cshtml
@@ -7,10 +7,10 @@
 <div class="container p-3">
     <div class="row pt-4">
         <div class="col-6">
-            <h2 class="text-primary">Category List</h2>
+            <h2 class="text-primary"> <i class="bi bi-journals"></i> &nbsp; Category List</h2>
         </div>
         <div class="col-6 text-end">
-            <a asp-action="Create" asp-action="Create" class="btn btn-primary">
+            <a asp-action="Create" class="btn btn-primary">
                 <i class="bi bi-plus-circle"></i> &nbsp; Create New Category
             </a>
         </div>
